# CSC211H_RezwanMahmud_HonorsProject_Fall2024

./: CMakeLists.txt  CMakeLists.txt.autosave  chatdialog.cpp  chatdialog.h  chatdialog.ui  event.cpp  event.h  event.ui  events.cpp  events.h  events.ui  events_data.txt  feed.cpp  feed.h  feed.ui  leaderboard.cpp  leaderboard.h  leaderboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  map.ui  readme.md  request.cpp  request.h  request.ui  request_data.txt  requests_data.txt  resources.qrc  signup.cpp  signup.h  signup.ui
SQLiteDB/: auth.db  auth.sqbpro  deliveryRequests.db
